--- a/ferrari/banxe.html
+++ b/ferrari/banxe.html
@@ -1,21 +1,93 @@
-<html>
+﻿<html>
 <head>
     <title>Timmy Garage</title>
+    <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
     <div class="header">
-
+        <img src="img/Nen.jpg"/>
     </div>
     <div class="menu">
-
+        <ul>
+            <li>Trang chủ</li>
+            <li>Giới thiệu</li>
+            <li>Dịch vụ</li>
+            <li>Sản phẩm</li>
+            <li>Liên hệ</li>
+        </ul>
     </div>
     <div class="wrapper">
         <div class="left-menu">
+            <p>DANH SÁCH SẢN PHẨM</p>
+            <ul>
+                <li>
+                    XE THỂ THAO
+                    <ul>
+                        <li>AudiR8</li>
+                        <li>BMW M2</li>
+                        <li>Acura NSX</li>
+                    </ul>
+                </li>
+
+                <li>
+                    XE TẢI
+                    <ul>
+                        <li>Ford Ranger</li>
+                        <li>Mitsubishi Triton </li>
+                    </ul>
+                </li>
+
+                <li>
+                    XE ĐỊA HÌNH
+                    <ul>
+                        <li>Toyota land cruiser 300</li>
+                        <li>Land rover defender 110</li>
+                    </ul>
+                </li>
+            </ul>
         </div>
         <div class="content">
-            
+            <div class="banner">
+                <img src="img/hinh.jpg" />
+            </div>
+            <div class="products">
+                <h1>SẢN PHẨM MỚI NHẤT</h1>
+                <div class="item">
+                    <img src="img/suzuki.jpg" />
+                    <h4>Suzuki Jimmy - SJ5C</h4>
+                    <p> 800 – 900 triệu VNĐ</p>
+                    <img src="img/sao5.jpg" />
+                    <input type="button" value="Mua hàng" />
+                </div>
+
+                <div class="item">
+                    <img src="img/raptor1.jpg" />
+                    <h4>Ford Ranger Raptor - JWR</h4>
+                    <p> 800 – 900 triệu VNĐ</p>
+                    <img src="img/sao5.jpg" />
+                    <input type="button" value="Mua hàng" />
+                </div>
+
+                <div class="item">
+                    <img src="img/GMC.jpg" />
+                    <h4>GMC Hummer EV - GHE</h4>
+                    <p> 800 – 900 triệu VNĐ</p>
+                    <img src="img/sao5.jpg" />
+                    <input type="button" value="Mua hàng" />
+                </div>
+
+            </div>
         </div>
-        <div></div>
+    </div>
+    <div class="footer">
+        <ul>
+            <li>Trang chủ</li>
+            <li>Giới thiệu</li>
+            <li>Dịch vụ</li>
+            <li>Sản phẩm</li>
+            <li>Liên hệ</li>
+        </ul>
+        <p>@2026 Designed By Professor D</p>
     </div>
 </body> 
 </html>
